# click_app

./: README.md  add.py  calc_v1.py  commands.py  days.py  greet.py  hello.py  ls_v1.py  ls_v2.py  ls_v4.py  ls_v5.py  ls_v6.py  person.py  rectangle.py  rectangle_v2.py  set_password.py  upper_greet.py  upper_greet_v2.py  user.py
calc/: calc_v2.py  commands.py
calc_project_layout/: README.md  pyproject.toml
calc_project_layout/calc/: __main__.py
sample/: important_read
